# awt

./: README.md  docker-compose.yml
docs/: bare_jrnl.tex
docs/bibtex/bib/: IEEEexample.bib
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/c2pa/: c2pa.worker.min.js
frontend/public/c2pa/assets/wasm/: toolkit_bg.wasm
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AnalyzeTab.tsx  WatermarkTab.tsx
python-backend/: .dockerignore  Dockerfile  README.md  inference_av.py  pyproject.toml
python-backend/videoseal/: __init__.py
python-backend/videoseal/cards/: videoseal.yaml
python-backend/videoseal/models/: extractor.py
python-backend/videoseal/utils/: cfg.py
rust-backend/: .gitignore  Cargo.toml  Dockerfile
rust-backend/src/: main.rs
