[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat", "full", "io"] }
mime_guess = "2.0"
http-body-util = "0.1"
tokio-stream = { version = "0.1.14", features = ["fs"] }
tower-http = { version = "0.6.2", features = ["cors", "limit"] }
futures = "0.3.30"
bytes = "1.5.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
hyper = { version = "1.0", features = ["full"] }
pin-project-lite = "0.2.13"
uuid = { version = "1.7", features = ["v4"] }
tower = { version = "0.5.2", features = ["full"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
async-stream = "0.3"
reqwest = { version = "0.12.12", features = ["multipart", "json", "stream"] }
rand = "0.9.0"
hex = "0.4"
c2pa = { version = "0.45.2", features = ["file_io", "v1_api"] }
c2pa-crypto = "0.6.2"
tempfile = "3.10.0"
chrono = "0.4"
once_cell = "1.19"
multer = { version = "3.1.0", features = ["all"] }
anyhow = "1.0.97"
anyhow-http = { version = "0.4.2", features = ["axum", "derive", "json"] }
